--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -166,7 +166,7 @@ html, body {
 
   #profile-dropdown .dropdown-menu-row-text {
     margin: 0px 0px 0px 21px;
-    padding: 9px 0px 0px 0px;
+    padding: 11px 0px 0px 0px;
   }
 }
 
@@ -367,7 +367,7 @@ html, body {
 }
 
 #text-overlay div:hover {
-  color: #fff;
+  color: #3399cc !important;
 }
 
 @media (min-width: 0px) and (max-width: 359px) {
@@ -564,12 +564,12 @@ h1 {
 
 .small-banner-image-container {
   width: 100%;
-  height: 140px;
+  height: 170px;
   overflow: hidden;
 }
 
 .students-image {
-  background: url(students-mackbook-pro.jpg);
+  background: url(small-banner-images/students-mackbook-pro-dark.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -673,7 +673,7 @@ h1 {
   *********************/
 
   .students-image {
-    background: url(students-mobile.jpg);
+    background: url(small-banner-images/students-mobile-dark.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
