--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -577,6 +577,26 @@ h1 {
   background-position: 50% 57%;
 }
 
+.yale-image {
+  background: url(small-banner-images/yale-campus-macbook-pro-dark.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: 50% 65%;
+}
+
+.small-banner-text {
+  position: absolute;
+  font-family: YaleNew;
+  color: #fff;
+  font-size: 1.7em;
+  width: 480px;
+  left: 50%;
+  margin-left: -240px;
+  margin-top: 60px;
+}
+
 #contact_form_message {
   margin-bottom: 10px;
 }
@@ -679,6 +699,26 @@ h1 {
     -o-background-size: cover;
     background-size: cover;
     background-position: 50% 57%;
+  }
+
+  .yale-image {
+    background: url(small-banner-images/yale-campus-macbook-pro-dark.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: 50% 65%;
+  }
+
+  .small-banner-text {
+    position: absolute;
+    font-family: YaleNew;
+    color: #fff;
+    font-size: 1.1em;
+    width: 320px;
+    left: 50%;
+    margin-left: -158px;
+    margin-top: 60px;
   }
 
   /****************
