update views to support views for yale banner with text overlay and views for audio/text file images

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -6,7 +6,9 @@
 
 <% provide(:page_title, "New Record") %>
 
-<div class="small-banner-image-container students-image"></div>
+<div class="small-banner-image-container students-image">
+  <div class="small-banner-text">A living document of student protest at Yale</div>
+</div>
 
 <div class="container">
   <div class="padding-sides">
