--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -52,6 +52,11 @@
         <div class="record-display-container">
           <%= audio_tag( @record.file_upload.url, controls: true,  class: "loaded-media loaded-audio", autoplay: true, alt: @record.title ) %>
         </div>
+
+      <% elsif @record.is_text? %>
+        <div class="record-display-container">
+          <%= image_tag( image_url("text-file-icon.png"), class: "loaded-media", alt: @record.title ) %>
+        </div>
       <% end %>
 
       <div class="metadata-spacer"></div>
