--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,9 @@
 
 <% provide(:page_title, "About") %>
 
-<div class="small-banner-image-container students-image"></div>
+<div class="small-banner-image-container yale-image">
+  <div class="small-banner-text">A living document of student protest at Yale</div>
+</div>
 
 <div class="container padding-bottom">
   <div class="padding-sides">
