--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -4,7 +4,9 @@
 
 <% provide(:page_title, "Contact") %>
 
-<div class="small-banner-image-container students-image"></div>
+<div class="small-banner-image-container yale-image">
+  <div class="small-banner-text">A living document of student protest at Yale</div>
+</div>
 
 <div class="container">
   <div class="padding-sides">
