add text overlay to records#show

--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -6,7 +6,9 @@
 
 <% provide(:page_title, "Show Record") %>
 
-<div class="small-banner-image-container students-image"></div>
+<div class="small-banner-image-container students-image">
+  <div class="small-banner-text">A living document of student protest at Yale</div>
+</div>
 
 <div class="white-background">
   <div class="container">
