set max width on images in record#show to rpevent images from overflowing containers

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -205,6 +205,7 @@ span.btn.btn-small.btn-default.btn-inverse {
   display: block;
   margin: auto;
   border: 1px solid darkgray;
+  max-width: 90%;
 }
 
 .record-display-left {
