update the placeholder text behind rails search box

--- a/app/views/user/_rails_search_form.html.erb
+++ b/app/views/user/_rails_search_form.html.erb
@@ -3,7 +3,7 @@
     <div class="input-group input-group-lg">
       <%= label_tag :keywords, nil, class: "sr-only" %>
       <%= text_field_tag :keywords, nil,
-        placeholder: "Title, Keywords, or Description",
+        placeholder: "Search",
         class: "form-control input-lg" %>
       <span class="input-group-btn">
       <%= submit_tag "Find Records",
