add period to confirm delete modal

--- a/app/views/records/_delete_record_modal.html.erb
+++ b/app/views/records/_delete_record_modal.html.erb
@@ -7,7 +7,7 @@
       <div class="modal-body">
         <div class="attention center-text">ATTENTION:</div>
         <div class="confirm-text">Are you sure you want to delete this record?<br>
-          This action cannot be undone</div>
+          This action cannot be undone.</div>
         <div class="modal-button-container">
           <button type="button" class="btn btn-primary blue-button modal-button" id="modal-button-cancel" data-dismiss="modal">CANCEL</button>
           
