--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -1,18 +1,55 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'records' %>
-  <%= stylesheet_link_tag 'gray_wrap' %>
   <%= javascript_include_tag 'records' %>
 <% end %>
 
 <% provide(:page_title, "Edit Record") %>
 
-<div class="small-banner-image-container students-image"></div>
+<div class="small-banner-image-container students-image">
+  <div class="small-banner-text">A living document of student protest at Yale</div>
+</div>
+
 <div class="should-include-name hidden-field"><%= @include_user_name %></div>
 <div class="should-include-date hidden-field"><%= @saved_date %></div>
 <div class="container">
   <div class="padding-sides padding-bottom">
-    <h1>Editing Record</h1>
 
-    <%= render 'form' %>
+    <div class="over-image-row">
+      <h3 class="record-title"> <%= @record.title %></h3> 
+      <div class="edit-delete-button-container">
+        <div class="btn-group modify-record-button">
+          <button type="button" class="btn gray-button" id="delete-record-button" data-dismiss="modal">DELETE</button>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <%= render 'delete_record_modal' %>
+
+    <% if @record.is_image? %>
+      <div class="record-display-container">
+        <%= image_tag @record.file_upload.url(:medium), :alt => @record.title %>
+      </div>
+
+    <% elsif @record.is_video? %>
+      <div class="record-display-container">
+        <%= video_tag( @record.file_upload.url, poster: @record.file_upload.url(:medium), size: "300x300", class: "loaded-media loaded-video", controls: true, alt: @record.title ) %>
+      </div>
+
+    <% elsif @record.is_audio? %>
+      <div class="record-display-container">
+        <%= audio_tag( @record.file_upload.url, controls: true,  class: "loaded-media loaded-audio", autoplay: true, alt: @record.title ) %>
+      </div>
+
+    <% elsif @record.is_text? %>
+      <div class="record-display-container">
+        <%= image_tag( image_url("text-file-icon.png"), class: "loaded-media", alt: @record.title ) %>
+      </div>
+    <% end %>
+
+    <hr>
+
+    <%= render 'edit_record_form' %>
   </div>
 </div>
