bold email address in records#new

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -25,7 +25,7 @@
 
       <div class="clear-floats"></div>
 
-      <div class="postscript-text">To discuss donating other collections of personal papers or organizational records to Manuscripts and Archives, please send inquiries to: mssa.donatematerials@yale.edu</div>
+      <div class="postscript-text">To discuss donating other collections of personal papers or organizational records to Manuscripts and Archives, please send inquiries to: <b>mssa.donatematerials@yale.edu</b></div>
       
     </div>
   </div>
