add padding bottom to user#show

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -30,7 +30,7 @@
 
     <% else %>
 
-      <div class="masonry-container">
+      <div class="masonry-container padding-bottom">
         <div class="masonry">
           <% @user_records.each do |record| %>
             
