change border radius to npx because old androids don't support % for border radius

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -132,7 +132,7 @@ span.btn.btn-small.btn-default.btn-inverse {
   background-color: #fff;
   position: absolute;
   z-index: 1;
-  border-radius: 50%;
+  border-radius: 10px;
   margin-top: -3px;
   cursor: pointer;
   border: 1px solid #a0a0a0;
