manually include request for bootstrap-datetimepicker styles in record#new and record#edit

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,6 +1,7 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'records' %>
   <%= stylesheet_link_tag 'mobile_gray_wrap' %>
+  <%= stylesheet_link_tag 'bootstrap-datetimepicker' %>
   <%= javascript_include_tag 'records' %>
 <% end %>
 
