--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -1,5 +1,6 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'records' %>
+  <%= stylesheet_link_tag 'bootstrap-datetimepicker' %>
   <%= javascript_include_tag 'records' %>
 <% end %>
 
