--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Typekit font js dependency -->
-  <script src="https://use.typekit.net/zsb0fok.js"></script>
+  <script async src="https://use.typekit.net/zsb0fok.js"></script>
   <script async>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <%= render 'layouts/shim' %>
