only load js async in production

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Voices | <%= yield :page_title %></title>
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true, :async => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true, :async => Rails.env == "production" %>
   
   <%= csrf_meta_tags %>
 
