--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -66,10 +66,10 @@
               </div>
 
 
-            <% elsif record.is_text? %>  
+            <% elsif record.has_default_image? %>  
               <div class="masonry-item">
                 <%= link_to record_path(record.id), :class => "section" do %>
-                  <%= image_tag("text-file-icon.png", :alt => record.title) %>
+                  <%= image_tag(record.file_upload_url, :alt => record.title) %>
                 <% end %>
                 <div class="masonry-item-title">
                   <%= record.title %>
